--- a/package.json
+++ b/package.json
@@ -13,18 +13,23 @@
   "dependencies": {
     "@astrojs/image": "^0.14.1",
     "@astrojs/mdx": "^0.16.0",
+    "@astrojs/react": "^2.2.1",
     "@astrojs/sitemap": "^1.0.1",
     "@astrojs/tailwind": "^3.0.1",
+    "@astrojs/ts-plugin": "^1.0.7",
     "@fontsource/inter": "^4.5.15",
+    "@fontsource/merriweather": "^5.0.2",
     "astro": "^2.0.11",
     "astro-feather-icons": "^1.0.2",
     "astro-icon": "^0.8.0",
     "astro-navbar": "^1.1.5",
     "astro-seo": "^0.7.0",
+    "framer-motion": "^10.12.16",
     "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
+    "prettier-plugin-astro": "^0.10.0",
     "sharp": "^0.31.3"
   }
 }
