--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@astrojs/sitemap": "^1.0.1",
     "@astrojs/tailwind": "^3.0.1",
     "@astrojs/ts-plugin": "^1.0.7",
+    "@fontsource-variable/open-sans": "^5.0.4",
     "@fontsource/inter": "^4.5.15",
     "@fontsource/merriweather": "^5.0.2",
+    "@fontsource/open-sauce-sans": "^5.0.3",
     "astro": "^2.0.11",
     "astro-feather-icons": "^1.0.2",
     "astro-icon": "^0.8.0",
